# killed_diffusion

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  closed_formula.cc  convergence.cc  debug.cpp  logging.cpp  montecarlo.cc  plot.cpp  plot.ipynb  requirements.txt  simulation  simulation.cpp  simulator.cpp
nbs/: Untitled.ipynb  killed.ipynb  main.ipynb  misc.ipynb  plot.ipynb
report/: appendix.tex  biblio.bib  killed_diffusion.tex  main.tex  monte_carlo.tex  payoffs_derivation.tex  simulations.tex  summary.tex
simulation.dSYM/Contents/Resources/DWARF/: simulation
src/: closed_formula.cpp  closed_formula.hpp  convergence.cpp  debug.cpp  logging.cpp  logging.hpp  montecarlo.cpp  montecarlo.hpp  simulation.cpp  to_be_deleted.cpp  wrapper.cpp
